[project]
name = "gemm-cutedsl-modal"
version = "0.1.0"
description = "CuTe DSL GEMM exercises for H100 and B200 on Modal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemm_cutedsl_modal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
